<resources>
    <string name="app_name">Darts OnScore</string>
    <string name="game_mode">Game mode</string>
    <string name="guest_player_str">Guest player</string>
    <string name="add_player_name_str">Add player name</string>
    <string name="cancel_str">Cancel</string>
    <string name="add_player_str">Add Player</string>
    <string name="sets_won_str">Sets won</string>
    <string name="initNumb_str">0</string>
    <string name="legs_won_str">Legs won</string>
    <string name="playerName_str">Azazamaz</string>
    <string name="resetYes">Yes</string>
    <string name="no_text">No</string>
    <string name="reset_score_str">Reset %1$s\'s last score?</string>
    <string name="leg_number">Leg Number</string>
    <string name="set_number">Set Number</string>
    <string name="start_offline_game">Start Offline Game</string>
    <string name="add_player">Add Player</string>
    <string name="players">Players</string>
    <string name="new_game_offline">New Offline Game</string>
    <string name="localStatistics">Local statistics</string>
    <string name="ok_text">OK</string>
    <string name="reset_score">Reset score</string>
    <string name="globalStat">Global statistics</string>
    <string name="player_name">Player name</string>
    <string name="result">Result</string>
    <string name="match_avg">Match Avg</string>
    <string name="new_online_game">New Online Game</string>
    <string name="start_online_game">Start Online Game</string>
    <string name="current_score">Match score</string>
    <string name="live_games">Live games</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="welcome_user">Welcome %1$s!</string>
    <string name="applogo">AppLogo</string>
    <string name="match_winner">Match Winner</string>
    <string name="leg_winner">Leg winner</string>
    <string name="no_internet">No internet</string>
    <string name="lost_internet_connection">Lost internet connection!</string>
    <string name="try_again">Try again</string>
    <string name="back">Back</string>
    <string name="invalid3darts">This is impossible with 3 darts!</string>
    <string name="not_possible">Not possible!</string>
    <string name="nocheckout">%d is not checkout!</string>
    <string name="signed_out">Signed out!</string>
    <string name="signed_in">Signed in!</string>
    <string name="sign_in_cancel">Sign in canceled!</string>
    <string name="use_sign_in">Use \'Sign in\' from menubar and try again!</string>
    <string name="add_players">Add 2 players</string>
    <string name="have_players">Already have 2 players!</string>
    <string name="min_name_length">Name length must be at least 3 characters long!</string>
    <string name="empty_stats">Empty Stats</string>
    <string name="no_local_match">No local match found!</string>
    <string name="game_winner">%1$s is won the game!</string>
    <string name="leg_win">%1$s is won the leg!</string>
    <string name="leg_avg">Leg avg</string>
    <string name="enter_score">Enter Score</string>
    <string name="exit_text">Exit</string>
    <string name="exit_message">You will exit from the application. Are you sure?</string>
    <string name="no_live_game">No live game at the moment!</string>
</resources>