<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF">

        <TextView
            android:id="@+id/addnewplayerLayout_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_player_name_str"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"/>

        <EditText
            android:id="@+id/newplayerName_et"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/guest_player_str"
            android:layout_below="@id/addnewplayerLayout_tv"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:maxLength="18"
            android:inputType="text"/>

        <Button
            android:id="@+id/cancelLayout_btn"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_below="@+id/newplayerName_et"
            android:background="@drawable/button_style"
            android:text="@string/cancel_str"/>

        <Button
            android:id="@+id/addplayerLayout_btn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_toEndOf="@id/cancelLayout_btn"
            android:layout_below="@id/newplayerName_et"
            android:background="@drawable/button_style"
            android:layout_margin="2dp"
            android:text="@string/add_player_str"/>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>