<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="home.lali.darts.LiveMatchActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_name"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"
            android:paddingTop="5dp"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result"
                android:layout_toStartOf="@id/score_text"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"
                android:paddingTop="5dp"/>
            <TextView
                android:id="@+id/score_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_score"
                android:layout_alignParentEnd="true"
                android:paddingStart="0dp"
                android:paddingEnd="5dp"
                android:paddingTop="5dp"/>

        </RelativeLayout>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/liveMainList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>
