<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="home.lali.darts.LocalStatActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_name"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"
            android:paddingTop="5dp"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result"
                android:layout_toStartOf="@id/match_text"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"
                android:paddingTop="5dp"/>
            <TextView
                android:id="@+id/match_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/match_avg"
                android:layout_alignParentEnd="true"
                android:paddingStart="0dp"
                android:paddingEnd="5dp"
                android:paddingTop="5dp"/>

        </RelativeLayout>


    </LinearLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/single_stat_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
