<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/playerName_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:text="@string/playerName_str"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/legs_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/playerName_tv"
            android:textColor="@color/colorPrimary"
            android:text="@string/legs_won_str"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/legsWon_tv"
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:layout_toEndOf="@id/legs_tv"
            android:layout_below="@id/playerName_tv"
            android:background="@color/scoreBackground"
            android:layout_marginStart="5dp"
            android:text="@string/initNumb_str"
            android:textAlignment="center"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"/>


        <TextView
            android:id="@+id/score_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/legsWon_tv"
            android:text="@string/initNumb_str"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            android:textSize="50sp"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/checkout_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/score_tv"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorPrimary"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"/>

        <TextView
            android:id="@+id/legAvg_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkout_tv"
            android:text="@string/leg_avg"
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/avgLeg_tv"
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:layout_below="@id/checkout_tv"
            android:layout_toEndOf="@id/legAvg_tv"
            android:layout_marginStart="25dp"
            android:textAlignment="center"
            android:background="@color/scoreBackground"
            android:text="@string/initNumb_str"
            android:textSize="15sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/matchAvg_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/avgLeg_tv"
            android:layout_marginTop="2dp"
            android:layout_marginStart="10dp"
            android:text="@string/match_avg"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/avgMatch_tv"
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:layout_below="@id/avgLeg_tv"
            android:layout_alignStart="@id/avgLeg_tv"
            android:layout_marginTop="2dp"
            android:textAlignment="center"
            android:background="@color/scoreBackground"
            android:text="@string/initNumb_str"
            android:textSize="15sp"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/enterScore_et"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_below="@id/matchAvg_tv"
            android:hint="@string/enter_score"
            android:textColorHint="@color/buttonStroke"
            android:textColor="@color/buttonStroke"
            android:inputType="number"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:background="@color/white"
            android:focusable="false"/>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>